2-implement-a-more-robust-logging-system